--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </div>
       </section>
       <section class="footer-lower">
-        <p>Copyright © 2022 Do Some Coding</p>
+        <p>Copyright © Vivek</p>
       </section>
     </footer>
   </body>
